kubernetes/taschenka_api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taschenka-api-deployment
spec:
  selector:
    matchLabels:
      app: taschenka-api
  template:
    metadata:
      labels:
        app: taschenka-api
    spec:
      containers:
        - name: taschenka-api
          image: melidon/taschenka_api:v0.2.0
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: taschenka-api-service
spec:
  type: ClusterIP
  selector:
    app: taschenka-api
  ports:
    - port: 80
      targetPort: 8080
