kubernetes/taschenka_web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taschenka-web-deployment
spec:
  selector:
    matchLabels:
      app: taschenka-web
  template:
    metadata:
      labels:
        app: taschenka-web
    spec:
      containers:
        - name: taschenka-web
          image: melidon/taschenka_web:v0.2.0
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
          lifecycle:
            postStart:
              exec:
                command:
                  [
                    "/bin/sh",
                    "-c",
                    "envsubst < /usr/share/nginx/html/environment_token.js > /usr/share/nginx/html/environment.js",
                  ]

---
apiVersion: v1
kind: Service
metadata:
  name: taschenka-web-service
spec:
  type: ClusterIP
  selector:
    app: taschenka-web
  ports:
    - port: 80
      targetPort: 8080
