kubernetes/taschenka_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taschenka-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: taschenka-web-service
                port:
                  number: 80
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: taschenka-api-service
                port:
                  number: 80
          - path: /kibana
            pathType: ImplementationSpecific
            backend:
              service:
                name: kibana
                port:
                  number: 5601
